--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,18 +7,22 @@
     src: url(../fonts/secondaryFont/DancingScript-VariableFont_wght.ttf);
 }
 
-.container {
-    background-color: red;
-    border: 5px solid darkolivegreen;
-    width: 500px;
-    height: 500px;
+html {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    background-color: black;
+    color:white;
 }
 
-h1 {
-    font-family: 'mainFont';
-    color:blue;
+.container {
+display: grid;
+width: 100vw;
+height: 100vh;
+background-image:url('../images/background.jpg');
+background-repeat:no-repeat;
+background-size:contain;
+background-position:center;
+filter:opacity(.5);
 }
-h2 {
-    font-family: 'secondaryFont';
-    color:lightseagreen;
-}
+
