--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,18 +11,50 @@ html {
     margin:0;
     padding:0;
     box-sizing: border-box;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color:white;
 }
 
 .container {
+padding-top: 5rem;
 display: grid;
-width: 100vw;
-height: 100vh;
-background-image:url('../images/background.jpg');
+gap:4rem;
+align-content: start;
+justify-content: center;
+min-height: 90vh;
+background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../images/background.jpg");
+
 background-repeat:no-repeat;
-background-size:contain;
 background-position:center;
-filter:opacity(.5);
 }
 
+.container >h1 {
+    color:white;
+    font-family:'secondaryFont';
+    font-size:5rem;
+    justify-self: center;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    gap:2rem;
+    width: 100%;
+    padding: 0 1rem;
+}
+
+button {
+    font-family: 'mainFont';
+    color: white;
+    background-color: transparent;
+    font-size:1.5rem;
+    border: none;
+    width: min-content;
+    transition: .3s;
+    border-bottom: 1px solid white;
+}
+
+button:hover {
+    font-weight: bold;
+    transform: scaleX(1.2);
+}
