--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,6 +41,8 @@ background-position:center;
     gap:2rem;
     width: 100%;
     padding: 0 1rem;
+    max-width: 30rem;
+    justify-self: center;
 }
 
 button {
@@ -51,10 +53,30 @@ button {
     border: none;
     width: min-content;
     transition: .3s;
-    border-bottom: 1px solid white;
+    border-bottom: .1em solid white;
+    cursor: pointer;
 }
 
 button:hover {
     font-weight: bold;
     transform: scaleX(1.2);
+}
+
+.page {
+    background-color: rgba(250,250,250,0.3);
+    width: 60%;
+    justify-self: center;
+    padding: 2rem;
+    font-size: 1.3rem;
+    line-height: 1.2;
+    border-radius: 2rem;
+}
+
+.page::first-letter {
+    font-family: 'secondaryFont';
+    font-size: 3rem;
+    font-weight: bold;
+    float: left;
+    margin-bottom:-10px;
+    margin-right: 5px;
 }
