--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,7 @@ gap:4rem;
 align-content: start;
 justify-content: center;
 min-height: 90vh;
-background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../images/background.jpg");
+background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("../images/background.jpg");
 
 background-repeat:no-repeat;
 background-position:center;
@@ -63,7 +63,7 @@ button:hover {
 }
 
 .page {
-    background-color: rgba(250,250,250,0.3);
+    background-color: rgba(250,250,250,0.2);
     width: 60%;
     justify-self: center;
     padding: 2rem;
@@ -79,4 +79,24 @@ button:hover {
     float: left;
     margin-bottom:-10px;
     margin-right: 5px;
+}
+
+.page h3 {
+    text-align: center;
+    margin:2rem 0 1rem 0;
+    font-size: 1.7rem;
+    text-decoration: underline;
+}
+.page>div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.page>div p:nth-child(odd) {
+    margin: .2rem 0 .2rem 60%;
+}
+
+.page>div p:nth-child(even) {
+    text-align: end;
+    margin: .2rem 60% .2rem 0rem;
 }
