--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,7 +64,7 @@ button:hover {
 
 .page {
     background-color: rgba(250,250,250,0.2);
-    width: 80%;
+    width: 60vw;
     justify-self: center;
     font-size: 1.3rem;
     line-height: 1.2;
@@ -156,4 +156,35 @@ margin: 1rem;
 text-align: center;
 font-family: 'secondaryFont';
 font-size: 2rem;
+}
+
+.contactPage {
+    display:grid;
+    grid-auto-flow: row;
+    padding: 2rem;
+    gap:1rem;
+
+}
+
+.contactPage h3 {
+    text-align: center;
+    font-size: 2.5rem;
+}
+.contactPage adress>p {
+    font-style: italic;
+    margin-left:calc(3rem + 15vw);
+    margin-bottom: .5rem;
+}
+.contactPage p:first-child {
+    font-family: 'secondaryFont';
+    font-weight: bold;
+    font-size: 2rem;
+
+}
+
+.contactPage iframe {
+    width:80%;
+    justify-self: center;
+    max-width: 30rem;
+    aspect-ratio: 1;
 }
