--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,8 @@
     src: url(../fonts/secondaryFont/DancingScript-VariableFont_wght.ttf);
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+
 html {
     margin:0;
     padding:0;
@@ -187,4 +189,24 @@ font-size: 2rem;
     justify-self: center;
     max-width: 30rem;
     aspect-ratio: 1;
+}
+.telContainer {
+    display: flex;
+    justify-content: center;
+    gap:1rem;
+    margin-top:1rem;
+    font-size:1.5rem;
+}
+.telContainer>span {
+    align-self: center;
+    font-size: 1.4rem;
+}
+
+.socials {
+    display: flex;
+}
+.socials>i {
+    color:black;
+    width:20px;
+    height: 20px;
 }
